feat: cart sheet

--- a/frontend/src/app/globals.css
+++ b/frontend/src/app/globals.css
@@ -2,10 +2,6 @@
 @tailwind components;
 @tailwind utilities;
 
-body {
-  font-family: Arial, Helvetica, sans-serif;
-}
-
 @layer base {
   :root {
     --background: 0 0% 100%;
@@ -68,5 +64,12 @@ body {
   }
   body {
     @apply bg-background text-foreground;
+  }
+}
+
+@utility scrollbar-hidden {
+  &::-webkit-scrollbar {
+    display: none;
+    width: 0;
   }
 }
